@@ -1,3 +1,8 @@
+Mon Dec 14 03:21:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (call_trace_func): remove the trace hook if any exception
+	  raised.  [ruby-list:46515]
+
 Mon Dec 14 02:27:32 2009  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* hash.c (rb_hash): always return a fixnum value because a return
